--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@primer/octicons-react": "^9.3.1",
     "@svgr/webpack": "4.3.3",
     "@types/jest": "^24.0.23",
+    "@types/mongoose": "^5.7.0",
     "@types/node": "^12.12.12",
     "@types/react": "^16.9.12",
     "@types/react-dom": "^16.9.4",
@@ -44,6 +45,7 @@
     "mobx": "^5.15.4",
     "mobx-react": "^6.1.4",
     "mongodb": "^3.4.1",
+    "mongoose": "^5.8.10",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
     "popper.js": "^1.16.0",
